// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentTypeMultipleField component should have a proper style generator 1`] = `
Object {
  "selectedMenuItem": Object {
    "backgroundColor": "test2 !important",
    "color": "test3",
  },
  "title": Object {
    "0": "t",
    "1": "e",
    "2": "s",
    "3": "t",
    "4": "1",
  },
}
`;

exports[`DocumentTypeMultipleField component should have a proper style generator 2`] = `
Object {
  "selectedMenuItem": Object {
    "backgroundColor": " !important",
    "color": "",
  },
  "title": Object {
    "0": "t",
    "1": "e",
    "2": "s",
    "3": "t",
    "4": "1",
  },
}
`;

exports[`DocumentTypeMultipleField component should have a proper style generator 3`] = `
Object {
  "selectedMenuItem": Object {
    "backgroundColor": " !important",
    "color": "",
  },
  "title": Object {
    "0": "t",
    "1": "e",
    "2": "s",
    "3": "t",
    "4": "1",
  },
}
`;

exports[`DocumentTypeMultipleField component should render default view 1`] = `
<WithStyles(ForwardRef(FormControl))
  fullWidth={true}
>
  <WithStyles(ForwardRef(InputLabel))>
    Work type
  </WithStyles(ForwardRef(InputLabel))>
  <WithStyles(ForwardRef(Select))
    aria-label="Select work types to search on"
    disabled={false}
    fullWidth={true}
    id="document-type-selector"
    multiple={true}
    name="document-type-selector"
    onChange={[Function]}
    value={Array []}
  >
    <WithStyles(ForwardRef(MenuItem))
      disabled={true}
      key="0"
    >
      Select work types
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="1"
      style={
        Object {
          "display": "block",
        }
      }
      value={130}
    >
      Conference Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="2"
      style={
        Object {
          "display": "block",
        }
      }
      value={174}
    >
      Book
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="3"
      style={
        Object {
          "display": "block",
        }
      }
      value={177}
    >
      Book Chapter
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="4"
      style={
        Object {
          "display": "block",
        }
      }
      value={179}
    >
      Journal Article
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="5"
      style={
        Object {
          "display": "block",
        }
      }
      value={181}
    >
      Department Technical Report
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="6"
      style={
        Object {
          "display": "block",
        }
      }
      value={183}
    >
      Working Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="7"
      style={
        Object {
          "display": "block",
        }
      }
      value={185}
    >
      Patent
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="8"
      style={
        Object {
          "display": "block",
        }
      }
      value={187}
    >
      Thesis
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="9"
      style={
        Object {
          "display": "block",
        }
      }
      value={189}
    >
      Seminar Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="10"
      style={
        Object {
          "display": "block",
        }
      }
      value={191}
    >
      Newspaper Article
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="11"
      style={
        Object {
          "display": "block",
        }
      }
      value={197}
    >
      Conference Proceedings
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="12"
      style={
        Object {
          "display": "block",
        }
      }
      value={202}
    >
      Generic Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="13"
      style={
        Object {
          "display": "block",
        }
      }
      value={204}
    >
      Preprint
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="14"
      style={
        Object {
          "display": "block",
        }
      }
      value={228}
    >
      Digilib Image
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="15"
      style={
        Object {
          "display": "block",
        }
      }
      value={238}
    >
      Image
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="16"
      style={
        Object {
          "display": "block",
        }
      }
      value={263}
    >
      Audio Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="17"
      style={
        Object {
          "display": "block",
        }
      }
      value={272}
    >
      Reference Entry
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="18"
      style={
        Object {
          "display": "block",
        }
      }
      value={275}
    >
      Research Report
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="19"
      style={
        Object {
          "display": "block",
        }
      }
      value={294}
    >
      Journal
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="20"
      style={
        Object {
          "display": "block",
        }
      }
      value={310}
    >
      Video Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="21"
      style={
        Object {
          "display": "block",
        }
      }
      value={313}
    >
      Creative Work
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="22"
      style={
        Object {
          "display": "block",
        }
      }
      value={316}
    >
      Design
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="23"
      style={
        Object {
          "display": "block",
        }
      }
      value={371}
    >
      Data Collection
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="24"
      style={
        Object {
          "display": "block",
        }
      }
      value={374}
    >
      Manuscript
    </WithStyles(ForwardRef(MenuItem))>
  </WithStyles(ForwardRef(Select))>
</WithStyles(ForwardRef(FormControl))>
`;

exports[`DocumentTypeMultipleField component should render disabled view 1`] = `
<WithStyles(ForwardRef(FormControl))
  fullWidth={true}
>
  <WithStyles(ForwardRef(InputLabel))>
    Work type
  </WithStyles(ForwardRef(InputLabel))>
  <WithStyles(ForwardRef(Select))
    aria-label="Select work types to search on"
    disabled={true}
    fullWidth={true}
    id="document-type-selector"
    multiple={true}
    name="document-type-selector"
    onChange={[Function]}
    value={Array []}
  >
    <WithStyles(ForwardRef(MenuItem))
      disabled={true}
      key="0"
    >
      Select work types
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="1"
      style={
        Object {
          "display": "block",
        }
      }
      value={130}
    >
      Conference Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="2"
      style={
        Object {
          "display": "block",
        }
      }
      value={174}
    >
      Book
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="3"
      style={
        Object {
          "display": "block",
        }
      }
      value={177}
    >
      Book Chapter
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="4"
      style={
        Object {
          "display": "block",
        }
      }
      value={179}
    >
      Journal Article
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="5"
      style={
        Object {
          "display": "block",
        }
      }
      value={181}
    >
      Department Technical Report
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="6"
      style={
        Object {
          "display": "block",
        }
      }
      value={183}
    >
      Working Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="7"
      style={
        Object {
          "display": "block",
        }
      }
      value={185}
    >
      Patent
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="8"
      style={
        Object {
          "display": "block",
        }
      }
      value={187}
    >
      Thesis
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="9"
      style={
        Object {
          "display": "block",
        }
      }
      value={189}
    >
      Seminar Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="10"
      style={
        Object {
          "display": "block",
        }
      }
      value={191}
    >
      Newspaper Article
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="11"
      style={
        Object {
          "display": "block",
        }
      }
      value={197}
    >
      Conference Proceedings
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="12"
      style={
        Object {
          "display": "block",
        }
      }
      value={202}
    >
      Generic Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="13"
      style={
        Object {
          "display": "block",
        }
      }
      value={204}
    >
      Preprint
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="14"
      style={
        Object {
          "display": "block",
        }
      }
      value={228}
    >
      Digilib Image
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="15"
      style={
        Object {
          "display": "block",
        }
      }
      value={238}
    >
      Image
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="16"
      style={
        Object {
          "display": "block",
        }
      }
      value={263}
    >
      Audio Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="17"
      style={
        Object {
          "display": "block",
        }
      }
      value={272}
    >
      Reference Entry
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="18"
      style={
        Object {
          "display": "block",
        }
      }
      value={275}
    >
      Research Report
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="19"
      style={
        Object {
          "display": "block",
        }
      }
      value={294}
    >
      Journal
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="20"
      style={
        Object {
          "display": "block",
        }
      }
      value={310}
    >
      Video Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="21"
      style={
        Object {
          "display": "block",
        }
      }
      value={313}
    >
      Creative Work
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="22"
      style={
        Object {
          "display": "block",
        }
      }
      value={316}
    >
      Design
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="23"
      style={
        Object {
          "display": "block",
        }
      }
      value={371}
    >
      Data Collection
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="24"
      style={
        Object {
          "display": "block",
        }
      }
      value={374}
    >
      Manuscript
    </WithStyles(ForwardRef(MenuItem))>
  </WithStyles(ForwardRef(Select))>
</WithStyles(ForwardRef(FormControl))>
`;

exports[`DocumentTypeMultipleField component should render with given document types selected by default 1`] = `
<WithStyles(ForwardRef(FormControl))
  fullWidth={true}
>
  <WithStyles(ForwardRef(InputLabel))>
    Work type
  </WithStyles(ForwardRef(InputLabel))>
  <WithStyles(ForwardRef(Select))
    aria-label="Select work types to search on"
    disabled={false}
    fullWidth={true}
    id="document-type-selector"
    multiple={true}
    name="document-type-selector"
    onChange={[Function]}
    value={
      Array [
        371,
        316,
      ]
    }
  >
    <WithStyles(ForwardRef(MenuItem))
      disabled={true}
      key="0"
    >
      Select work types
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="1"
      style={
        Object {
          "display": "block",
        }
      }
      value={130}
    >
      Conference Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="2"
      style={
        Object {
          "display": "block",
        }
      }
      value={174}
    >
      Book
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="3"
      style={
        Object {
          "display": "block",
        }
      }
      value={177}
    >
      Book Chapter
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="4"
      style={
        Object {
          "display": "block",
        }
      }
      value={179}
    >
      Journal Article
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="5"
      style={
        Object {
          "display": "block",
        }
      }
      value={181}
    >
      Department Technical Report
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="6"
      style={
        Object {
          "display": "block",
        }
      }
      value={183}
    >
      Working Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="7"
      style={
        Object {
          "display": "block",
        }
      }
      value={185}
    >
      Patent
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="8"
      style={
        Object {
          "display": "block",
        }
      }
      value={187}
    >
      Thesis
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="9"
      style={
        Object {
          "display": "block",
        }
      }
      value={189}
    >
      Seminar Paper
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="10"
      style={
        Object {
          "display": "block",
        }
      }
      value={191}
    >
      Newspaper Article
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="11"
      style={
        Object {
          "display": "block",
        }
      }
      value={197}
    >
      Conference Proceedings
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="12"
      style={
        Object {
          "display": "block",
        }
      }
      value={202}
    >
      Generic Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="13"
      style={
        Object {
          "display": "block",
        }
      }
      value={204}
    >
      Preprint
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="14"
      style={
        Object {
          "display": "block",
        }
      }
      value={228}
    >
      Digilib Image
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="15"
      style={
        Object {
          "display": "block",
        }
      }
      value={238}
    >
      Image
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="16"
      style={
        Object {
          "display": "block",
        }
      }
      value={263}
    >
      Audio Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="17"
      style={
        Object {
          "display": "block",
        }
      }
      value={272}
    >
      Reference Entry
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="18"
      style={
        Object {
          "display": "block",
        }
      }
      value={275}
    >
      Research Report
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="19"
      style={
        Object {
          "display": "block",
        }
      }
      value={294}
    >
      Journal
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="20"
      style={
        Object {
          "display": "block",
        }
      }
      value={310}
    >
      Video Document
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="21"
      style={
        Object {
          "display": "block",
        }
      }
      value={313}
    >
      Creative Work
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={true}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="22"
      style={
        Object {
          "display": "block",
        }
      }
      value={316}
    >
      Design
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={true}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="23"
      style={
        Object {
          "display": "block",
        }
      }
      value={371}
    >
      Data Collection
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="24"
      style={
        Object {
          "display": "block",
        }
      }
      value={374}
    >
      Manuscript
    </WithStyles(ForwardRef(MenuItem))>
  </WithStyles(ForwardRef(Select))>
</WithStyles(ForwardRef(FormControl))>
`;
